# CppEdge

./: CMakeLists.txt  README.md
book/chp2/: Vector.cpp  Vector.h  driver2.cpp  user_defined_types.cpp
book/chp2/headers/: Vector.h
book/chp3/: Complex.cpp  Container.cpp  Vector_Container.cpp  classes.cpp  driver3.cpp
book/chp3/headers/: Complex.h  Complex3.h  Container1.h  Vector_Container.h
book/chp4/: driver4.cpp
book/chp4/headers/: Complex3.h
braintrain/boost/: GTest.cpp  GenericLambda.cpp  SharedPointer.cpp  UniquePointer.cpp  boostx.cpp  hash_map.cpp  hash_map.h
braintrain/boostdi/: boostdi.cpp  di.hpp
braintrain/boostdi/bindings/: bindings1.cpp  bindings2.cpp  bindings3.cpp  bindings4.cpp  bindings5.cpp
braintrain/boostdi/intro/: boostdi.cpp
braintrain/darwin/: darwin.cpp
braintrain/descartes/: descartes.cpp
braintrain/einstein/: Vector.cpp  Vector_cpp20.cpp  einstein.cpp
braintrain/einstein/headers/: Vector.h
braintrain/faraday/: faraday.cpp
braintrain/feynman/: feynman.cpp
braintrain/khwarizmi/: Complex3.cpp  Vector3.cpp  khwarizmi.cpp
braintrain/khwarizmi/headers/: Complex3.h  Vector3.h
braintrain/kubernetes/: kubernetes.cpp
braintrain/pascal/: EnglishDictionary.cpp  pascal.cpp
braintrain/pascal/headers/: Dictionary.h  EnglishDictionary.h
braintrain/plato/: plato.cpp
braintrain/pythagoras/: Complex2.cpp  Complex3.cpp  Container_Factory.cpp  driver3.cpp
braintrain/pythagoras/headers/: Container1.h  Container_Factory.h  Vector_Container.h
braintrain/riemann/: Sedan.cpp  TVector.cpp  Truck.cpp  riemann.cpp
braintrain/riemann/headers/: Sedan.h  TVector.h  Truck.h  Vehicle.h
chp1/: basics.cpp
chp2/: Vector2.cpp
